--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="welcome-sign">
+  <div>
+    <h2 class="mat-display-4">Welcome to PicNic!</h2>
+    <p class="mat-display-1">
+      <span>Sign in to start planning!</span>
+    </p>
+  </div>
+</div>
