--- a/src/app/home/login/user-login/user-login.component.html
+++ b/src/app/home/login/user-login/user-login.component.html
@@ -1,1 +1,39 @@
-<p>user-login works!</p>
+<div class="container">
+  <mat-card class="card mat-elevation-z24">
+    <mat-card-header>
+      <mat-card-title class="mat-display-2">Login</mat-card-title>
+      <mat-card-subtitle></mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field>
+          <input
+            matInput
+            placeholder="Email Address"
+            formControlName="email"
+            required
+          />
+        </mat-form-field>
+        <mat-form-field>
+          <input
+            matInput
+            placeholder="Password"
+            formControlName="password"
+            required
+          />
+        </mat-form-field>
+        <mat-card-actions>
+          <button mat-button mat-raised-button color="primary">LOGIN</button>
+          <button
+            mat-button
+            mat-raised-button
+            color="warn"
+            (click)="onCancel()"
+          >
+            CANCEL
+          </button>
+        </mat-card-actions>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
