fixed test, going to merge to develop

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,11 +3,14 @@ mat-toolbar {
   justify-content: space-between;
 }
 
+.group-name {
+  padding-right: 40px;
+}
+
 .stick {
   position: fixed;
   top: 0;
   width: 100%;
-  overflow: hidden;
 }
 
 .home {
