--- a/src/app/food/list-food/list-food.component.html
+++ b/src/app/food/list-food/list-food.component.html
@@ -1,1 +1,43 @@
-<p>list-food works!</p>
+<div class="container" *ngIf="foodCount > 0; else noFood">
+  <mat-accordion>
+    <mat-expansion-panel *ngFor="let item of food">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          {{ item.name | titlecase }}
+        </mat-panel-title>
+        <mat-panel-description>
+          Last Cooked: {{ item.lastUsed.toDate() | date }}
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <div class="expanded-panel">
+        <mat-list>
+          <mat-list-item *ngFor="let ing of item.ingredients">
+            {{ ing.quantity }} {{ ing.unit }} of {{ ing.name }}
+          </mat-list-item>
+        </mat-list>
+      </div>
+      <div class="edit">
+        <button mat-mini-fab (click)="editFoodOpen(item)">
+          <i class="material-icons">
+            edit
+          </i>
+        </button>
+      </div>
+    </mat-expansion-panel>
+  </mat-accordion>
+  <button
+    class="add"
+    mat-raised-button
+    color="accent"
+    (click)="openAddFoodModal()"
+  >
+    <i class="material-icons">
+      add
+    </i>
+  </button>
+</div>
+<ng-template #noFood>
+  <mat-toolbar>
+    There's no food here!
+  </mat-toolbar>
+</ng-template>
