--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,8 @@ body {
 }
 body {
   margin: 0;
+  margin-top: 100px;
+  height: auto;
   font-family: 'Montserrat', sans-serif;
   background-attachment: fixed;
 
