modified css and added password property to login template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button class="home" mat-button routerLink="">PicNic</button>
   <div *ngIf="auth.user$">
     <h1 *ngIf="groupService.groupId != null" class="mat-h1">
-      The {{ groupService.groupId | titlecase }} Group
+      {{ groupService.groupId | titlecase }} Group
     </h1>
   </div>
   <div class="menu">
