--- a/src/app/home/login/user-login/user-login.component.html
+++ b/src/app/home/login/user-login/user-login.component.html
@@ -17,6 +17,7 @@
         <mat-form-field>
           <input
             matInput
+            type="password"
             placeholder="Password"
             formControlName="password"
             required
