--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ body {
 }
 body {
   margin: 0;
-  margin-top: 100px;
+  padding-top: 60px;
   height: auto;
   font-family: 'Montserrat', sans-serif;
   background-attachment: fixed;
