added moment and adding food to events

--- a/src/app/events/list-events/past-events/past-events.component.html
+++ b/src/app/events/list-events/past-events/past-events.component.html
@@ -1,1 +1,4 @@
-<p>past-events works!</p>
+<div *ngIf="pastEvents; else noPastEvents"></div>
+<ng-template #noPastEvents>
+  You're boring!
+</ng-template>
