--- a/src/app/events/create-event/create-event.component.scss
+++ b/src/app/events/create-event/create-event.component.scss
@@ -1,9 +1,18 @@
 .container {
-    display: flex;
-    width: 100%
+  display: flex;
+  width: 100%;
+  text-align: center;
 }
 
 mat-card {
-    width: 100%;
+  width: 100%;
+}
 
+// mat-card-content {
+//   display: flexbox;
+//   justify-content: center;
+// }
+
+mat-form-field {
+  width: -webkit-fill-available;
 }
