--- a/src/app/events/list-events/list-events.component.html
+++ b/src/app/events/list-events/list-events.component.html
@@ -1,6 +1,8 @@
 <mat-tab-group dynamicHeight class="tab-group">
   <mat-tab label="Upcoming">
-    <app-upcoming-events events="upcomingEvents"></app-upcoming-events>
+    <app-upcoming-events
+      [upcomingEvents]="upcomingEvents"
+    ></app-upcoming-events>
   </mat-tab>
   <mat-tab label="Past">
     <app-past-events events="pastEvents"></app-past-events>
