--- a/src/app/events/list-events/list-events.component.html
+++ b/src/app/events/list-events/list-events.component.html
@@ -1,8 +1,11 @@
 <mat-tab-group dynamicHeight class="tab-group">
   <mat-tab label="Upcoming">
-    <app-upcoming-events
-      [upcomingEvents]="upcomingEvents"
-    ></app-upcoming-events>
+    <app-upcoming-events [upcomingEvents]="upcomingEvents"></app-upcoming-events>
+    <button class="add" mat-raised-button color="accent" routerLink="create">
+      <i class="material-icons">
+        add
+      </i>
+    </button>
   </mat-tab>
   <mat-tab label="Past">
     <app-past-events events="pastEvents"></app-past-events>
