--- a/src/app/home/login/user-login/user-login.component.html
+++ b/src/app/home/login/user-login/user-login.component.html
@@ -7,30 +7,14 @@
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <mat-form-field>
-          <input
-            matInput
-            placeholder="Email Address"
-            formControlName="email"
-            required
-          />
+          <input matInput placeholder="Email Address" formControlName="email" required type="email" />
         </mat-form-field>
         <mat-form-field>
-          <input
-            matInput
-            type="password"
-            placeholder="Password"
-            formControlName="password"
-            required
-          />
+          <input matInput type="password" placeholder="Password" formControlName="password" required />
         </mat-form-field>
         <mat-card-actions>
           <button mat-button mat-raised-button color="primary">LOGIN</button>
-          <button
-            mat-button
-            mat-raised-button
-            color="warn"
-            (click)="onCancel()"
-          >
+          <button mat-button mat-raised-button color="warn" (click)="onCancel()">
             CANCEL
           </button>
         </mat-card-actions>
