--- a/src/app/home/registration/user-registration/user-registration.component.scss
+++ b/src/app/home/registration/user-registration/user-registration.component.scss
@@ -1,64 +1,3 @@
 .container {
-  height: auto;
-  display: flex;
-  justify-content: center;
-  margin: 10%;
-}
-
-mat-card-header {
-  display: flex;
-  justify-content: center;
-}
-
-.material-icons {
-  font-size: 40px;
-}
-
-.card {
-  height: 100%;
-  max-width: 400px;
-  padding: 5%;
-  width: auto;
-}
-
-.header-image {
-  background-size: cover;
-}
-
-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
-
-mat-form-field {
-  width: 100%;
-}
-mat-card-actions {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.groupId {
-  display: flex;
-  justify-content: space-between;
-}
-
-#groupId {
-  width: 45%;
-}
-
-.portion {
-  width: 45%;
-}
-mat-slider {
-  position: relative;
-  bottom: 2px;
-  width: 100%;
-}
-
-mat-error {
-  position: relative;
-  bottom: 8px;
-  padding-bottom: 8px;
+  background-color: rgba(240, 248, 255, 0.9);
 }
