--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/theming';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 // Define a custom typography config that overrides the font-family as well as the
 // `headlines` and `body-1` levels.
