changed add food to a standalone page instead of a modal

--- a/src/app/events/list-events/past-events/past-events.component.html
+++ b/src/app/events/list-events/past-events/past-events.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="pastEvents; else noPastEvents"></div>
-<ng-template #noPastEvents>
+<ng-template class="noEvents" #noPastEvents>
   You're boring!
 </ng-template>
