--- a/src/app/food/list-food/list-food.component.html
+++ b/src/app/food/list-food/list-food.component.html
@@ -30,7 +30,7 @@
       </div>
     </mat-expansion-panel>
   </mat-accordion>
-  <button class="add" mat-raised-button color="accent" (click)="openAddFoodModal()">
+  <button class="add" mat-raised-button color="accent" (click)="goToAddFoodComponent()">
     <i class="material-icons">
       add
     </i>
@@ -40,7 +40,7 @@
   <mat-toolbar>
     There's no food here!
   </mat-toolbar>
-  <button class="add" mat-raised-button color="accent" (click)="openAddFoodModal()">
+  <button class="add" mat-raised-button color="accent" (click)="goToAddFoodComponent()">
     <i class="material-icons">
       add
     </i>
