--- a/src/app/home/login/user-login/user-login.component.html
+++ b/src/app/home/login/user-login/user-login.component.html
@@ -24,5 +24,6 @@
 </div> -->
 <div class="container">
   <ngx-auth-firebaseui-login (onCreateAccountRequested)="goToRegistration()" (onSuccess)="onSubmit($event)"
+    (onError)="errorUserPrompt($event)"
     [providers]="[providers.Google, providers.Facebook, providers.EmailAndPassword]"></ngx-auth-firebaseui-login>
 </div>
