--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,7 @@ body {
   background-color: #081035;
   background-image: linear-gradient(149deg, #081035 0%, #3f51b5 100%);
 }
+
+ngx-auth-firebaseui-login #login-form-wrapper #login-form .separator .text {
+  z-index: 1 !important;
+}
