--- a/src/app/group/list-group/list-group.component.scss
+++ b/src/app/group/list-group/list-group.component.scss
@@ -1,12 +1,11 @@
 .container {
-  padding: 10px 10% 15px 10%;
+  margin-top: 0;
 }
 
 mat-toolbar {
   font-weight: bold;
   justify-content: center;
   margin-bottom: 20px;
-  border-radius: 6px;
   font-size: xx-large;
   z-index: 1;
 }
