--- a/src/app/events/list-events/list-events.component.html
+++ b/src/app/events/list-events/list-events.component.html
@@ -8,6 +8,6 @@
     </button>
   </mat-tab>
   <mat-tab label="Past">
-    <app-past-events events="pastEvents"></app-past-events>
+    <app-past-events [pastEvents]="pastEvents"></app-past-events>
   </mat-tab>
 </mat-tab-group>
