--- a/src/app/events/list-events/upcoming-events/upcoming-events.component.html
+++ b/src/app/events/list-events/upcoming-events/upcoming-events.component.html
@@ -1,29 +1,31 @@
-<div class="container" *ngIf="!noEvents; else noEvent">
+<div class="container" *ngIf="upcomingEvents | async as events; else noEvent">
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let item of upcomingEvents | async">
+    <mat-expansion-panel *ngFor="let event of events">
       <mat-expansion-panel-header>
         <mat-panel-title>
-          {{ item.name | titlecase }}
+          {{ event.name | titlecase }}
         </mat-panel-title>
         <mat-panel-description>
-          {{ item.startDate.toDate() | date }}
+          {{ event.startDate.toDate() | date }}
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <div class="expanded-panel"></div>
-      <div class="edit">
-        <button mat-mini-fab>
-          <i class="material-icons">
-            edit
-          </i>
-        </button>
+      <div class="expanded-panel">
+        <div class="food">
+          <button mat-raised-button color="primary" class="event-food">See Event Food</button>
+        </div>
+        <div class="edit">
+          <button mat-raised-button color="primary">
+            Update Event
+          </button>
+        </div>
       </div>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
 <ng-template #noEvent>
-  <mat-toolbar>
-    Add some events!
-  </mat-toolbar>
+  <div class="spinner-container">
+    <mat-spinner></mat-spinner>
+  </div>
   <button class="add" mat-raised-button>
     <i routerLink="create" class="material-icons">
       add
