--- a/src/app/events/list-events/upcoming-events/upcoming-events.component.scss
+++ b/src/app/events/list-events/upcoming-events/upcoming-events.component.scss
@@ -2,6 +2,13 @@ mat-panel-title {
   width: 50%;
 }
 
-.edit {
-  float: right;
+.expanded-panel {
+  display: flex;
+  justify-content: space-between;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
 }
