--- a/src/app/food/list-food/list-food.component.scss
+++ b/src/app/food/list-food/list-food.component.scss
@@ -1,7 +1,3 @@
-.container {
-  padding: 10px 10% 0px 10%;
-}
-
 mat-toolbar {
   font-weight: bold;
   justify-content: center;
@@ -47,4 +43,10 @@ mat-panel-title {
 .edit button {
   position: relative;
   bottom: 5px;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
 }
